--- a/server/views/manager.ejs
+++ b/server/views/manager.ejs
@@ -31,9 +31,8 @@
             <div class="manager-nav"><a href="./userlogs"><button><i class="fas fa-users"></i></button></a><h2>User Logs</h2></div>
             <!--<div class="manager-nav"><a href="./searchbyparcel"><button><i class="fas fa-search"></i></button></a><h2>Search By Parcel</h2></div>
             <div class="manager-nav"><a href="./searchbyuser"><button><i class="fas fa-search"></i></button></a><h2>Search By User</h2></div>-->
-            <div class="manager-nav"><a href="./parcellist"><button><i class="fas fa-list-ul"></i></button></a><h2>Parcel List</h2></div>
+            <div class="manager-nav"><button id="managerListButton"><i class="fas fa-list-ul"></i></button><h2>Parcel List</h2></div>
             <div class="manager-nav"><a href="./metrics"><button><i class="fas fa-chart-pie"></i></button></a><h2>Metrics By User</h2></div>
-
             <div class="manager-nav"><button id="managerSearchButton"><i class="fas fa-search"></i></button><h2>Search</h2></div>
             
             
@@ -43,7 +42,12 @@
             <div class="manager-nav"><a href="./searchbystatus"><button><i class="fas fa-search"></i></button></a><h2>Search By Status</h2></div>
             <div class="manager-nav"><a href="./searchbylisttype"><button><i class="fas fa-search"></i></button></a><h2>Search By Type</h2></div>
             <div class="manager-nav"><a href="./searchbyrankresumed"><button><i class="fas fa-search"></i></button></a><h2>Search By Rank</h2><h2>(Without Images)</h2></div>
-            <div class="manager-nav"><a href="./resumedsearchbycounty"><button><i class="fas fa-search"></i></button></a><h2>Search By County</h2><h2>(Without Images)</h2></div>-->
+            <div class="manager-nav"><a href="./resumedsearchbycounty"><button><i class="fas fa-search"></i></button></a><h2>Search By County</h2><h2>(Without Images)</h2></div>
+        
+                <div class="manager-nav"><a href="./parcellist"><button><i class="fas fa-list-ul"></i></button></a><h2>Parcel List</h2></div>
+
+                <div class="manager-nav"><a href="./countycalendarbystate"><button id="county-calendar-by-state"><i class="fas fa-file-signature"></i></button></a><h2>County Calendar</h2><h2>(By State)</h2></div>
+        -->
             
             
                                    
@@ -51,17 +55,18 @@
 
         <div class="manager-line">
             <div class="manager-nav"><a href="./getchecked"><button><i class="far fa-check-square"></i></button></a><h2>Get All Checked</h2></div>
-            <div class="manager-nav"><a href="./countycalendar"><button id="county-calendar"><i class="far fa-calendar-alt"></i></button></a><h2>County Calendar</h2><h2>(By Date)</h2></div>
-            <div class="manager-nav"><a href="./countycalendarbystate"><button id="county-calendar-by-state"><i class="far fa-calendar-alt"></i></button></a><h2>County Calendar</h2><h2>(By State)</h2></div>
+            <div class="manager-nav"><a href="./calendar"><button id="county-calendar"><i class="far fa-calendar-alt"></i></button></a><h2>Calendar</h2></div>
+            <div class="manager-nav"><button id="checkProdButton"><i class="fas fa-file-signature"></i></button><h2>Check Production</h2></div>
+            
             <div class="manager-nav"><a href="./templates"><button><i class="fas fa-envelope-open-text"></i></button></a><h2>Templates</h2></div>
             <div class="manager-nav"><a><button class="add-user" id="logoff"></button></a><h2>&nbsp;</h2></div>
             <div class="manager-nav"><a><button class="add-user" id="logoff"><i class="fas fa-power-off"></i></button></a><h2>Logoff</h2></div>
             
         </div>
 
-        <div class="searchOptions">
-            <div id="closeButtonDiv">
-                <button id="closeOptions"><i class="far fa-times-circle"></i></button>
+        <div class="searchOptions" id="searchOptions">
+            <div class="closeButtonDiv">
+                <button class="closeOptions" onclick="closeThis(this)"><i class="far fa-times-circle"></i></button>
             </div>
             <ul>
                 <a href="./searchbyparcel"><li>Search By Parcel</li></a>
@@ -73,6 +78,30 @@
                 <a href="./searchbylisttype"><li>Search By List Type</li></a>
                 <a href="./searchbyrankresumed"><li>Search By Rank (100 itens)</li></a>
                 <a href="./resumedsearchbycounty"><li>Search By County (100 itens)</li></a>
+            </ul>
+
+        </div>
+
+        <div class="searchOptions" id="listOptions">
+            <div class="closeButtonDiv">
+                <button class="closeOptions" onclick="closeThis(this)"><i class="far fa-times-circle"></i></button>
+            </div>
+            <ul>
+                <a href="./parcellist"><li>List By User</li></a>
+                <a href="./parcellistbysuper"><li>List By Supervisor</li></a>
+                
+            </ul>
+
+        </div>
+
+        <div class="searchOptions" id="prodOptions">
+            <div class="closeButtonDiv">
+                <button class="closeOptions" onclick="closeThis(this)"><i class="far fa-times-circle"></i></button>
+            </div>
+            <ul>
+                <a href="./countycalendarbystate"><li>Production By State</li></a>
+                <a href="./countycalendar"><li>Production By Date</li></a>
+                
             </ul>
 
         </div>
