--- a/server/views/searchbyrankresumed.ejs
+++ b/server/views/searchbyrankresumed.ejs
@@ -33,7 +33,7 @@
                     <div><input type="radio" name="ranktype" value="rank2"><label for="">Rank 2</label></div>
                     <div><input type="radio" name="ranktype" value="rank3"><label for="">Rank 3</label></div>
                 </div>
-                <div><label>And By Date:</label><input type="date" id="date" name=""></div>
+                <div style="display: none;"><label>And By Date:</label><input type="date" id="date" name=""></div>
                 <div><label>Page:</label><input value="1" type="number" id="page" name=""></div>
                 <button class="search-button">SEARCH</button>
                 <button class="copy-button">COPY ALL PARCELS</button>
