--- a/server/views/searchbyuser.ejs
+++ b/server/views/searchbyuser.ejs
@@ -27,7 +27,7 @@
     <section class="controller janela">
              <form id="search-form">
                 <h2>Search</h2>
-                <div><label for="user">By User:</label><input type="text" id="user" name=""></div>
+                <div><label for="user">By User:</label><select name="" id="selectuser-parcellist"></select></div>
                 <div><label>And By Date:</label><input type="date" id="date" name=""></div>
                 <div><label>Page:</label><input value="1" type="number" id="page" name=""></div>
                 <button class="search-button">SEARCH</button>
