--- a/server/views/manager.ejs
+++ b/server/views/manager.ejs
@@ -54,63 +54,65 @@
             <hr>
         </div>
 
-        <div class="manager-line">
-            <h1>Process:</h1>
-        </div>
-
-        <section class="manager-section">
+        <div class="process">
             <div class="manager-line">
-                <h2>Next Auction:</h2>
+                <h1>Process:</h1>
             </div>
-        </section>
         
-        <section class="manager-section">
-            <div class="manager-line">
-                <h2>Stage 1:</h2>
-            </div>
+            <section class="manager-section">
+                <div class="manager-line">
+                    <h2>Next Auction:</h2>
+                </div>
+            </section>
             
-            <div class="manager-line">
-                <div><h3>How Many Parcels:</h3><h4 id="stage1-parcel-quant"></h4></div>
-                <div><h3>On Each Rank:</h3><h4 id="stage1-rank-quant"></h4></div>
-                <div><h3>Today:</h3><h4 id="stage1-result">+0</h4></div>
-            </div>
-        </section>
-    
-        <section class="manager-section">
-            <div class="manager-line">
-                <h2>Stage 2:</h2>
-            </div>
-            
-            <div class="manager-line">
-                <div><h3>How Many Parcels:</h3><h4 id="stage2-parcel-quant"></h4></div>
-                <div><h3>On Each Rank:</h3><h4 id="stage2-rank-quant"></h4></div>
-                <div><h3>Today:</h3><h4 id="stage2-result">+0</h4></div>
-            </div>
-        </section>
-
-        <section class="manager-section">
-            <div class="manager-line">
-                <h2>Stage 3:</h2>
-            </div>
-            
-            <div class="manager-line">
-                <div><h3>How Many Parcels:</h3><h4 id="stage3-parcel-quant"></h4></div>
-                <div><h3>On Each Rank:</h3><h4 id="stage3-rank-quant"></h4></div>
-                <div><h3>Today:</h3><h4 id="stage3-result">+0</h4></div>
-            </div>
-        </section>
-
-        <section class="manager-section">
-            <div class="manager-line">
-                <h2>Total:</h2>
-            </div>
-            
-            <div class="manager-line">
-                <div><h3>How Many Parcels:</h3><h4 id="total-parcel-quant"></h4></div>
-                <div><h3>&nbsp;	</h3></div>
-                <div><h3>Today:</h3><h4 id="total-result">+0</h4></div>
-            </div>
-        </section>
+            <section class="manager-section">
+                <div class="manager-line">
+                    <h2>Stage 1:</h2>
+                </div>
+                
+                <div class="manager-line">
+                    <div><h3>How Many Parcels:</h3><h4 id="stage1-parcel-quant"></h4></div>
+                    <div><h3>On Each Rank:</h3><h4 id="stage1-rank-quant"></h4></div>
+                    <div><h3>Today:</h3><h4 id="stage1-result">+0</h4></div>
+                </div>
+            </section>
+        
+            <section class="manager-section">
+                <div class="manager-line">
+                    <h2>Stage 2:</h2>
+                </div>
+                
+                <div class="manager-line">
+                    <div><h3>How Many Parcels:</h3><h4 id="stage2-parcel-quant"></h4></div>
+                    <div><h3>On Each Rank:</h3><h4 id="stage2-rank-quant"></h4></div>
+                    <div><h3>Today:</h3><h4 id="stage2-result">+0</h4></div>
+                </div>
+            </section>
+        
+            <section class="manager-section">
+                <div class="manager-line">
+                    <h2>Stage 3:</h2>
+                </div>
+                
+                <div class="manager-line">
+                    <div><h3>How Many Parcels:</h3><h4 id="stage3-parcel-quant"></h4></div>
+                    <div><h3>On Each Rank:</h3><h4 id="stage3-rank-quant"></h4></div>
+                    <div><h3>Today:</h3><h4 id="stage3-result">+0</h4></div>
+                </div>
+            </section>
+        
+            <section class="manager-section">
+                <div class="manager-line">
+                    <h2>Total:</h2>
+                </div>
+                
+                <div class="manager-line">
+                    <div><h3>How Many Parcels:</h3><h4 id="total-parcel-quant"></h4></div>
+                    <div><h3>&nbsp;	</h3></div>
+                    <div><h3>Today:</h3><h4 id="total-result">+0</h4></div>
+                </div>
+            </section>
+        </div>
 
         
         <div class="options" id="searchOptions">
