--- a/server/views/searchbycounty.ejs
+++ b/server/views/searchbycounty.ejs
@@ -12,6 +12,8 @@
     <script src="https://kit.fontawesome.com/30836ed2bd.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/docx@7.1.0/build/index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.js"></script>
+    
+
     <title>HUNTERFY MANAGER</title>
 </head>
 <body>
@@ -24,30 +26,46 @@
             </div>
         </div>
     </header>
-    <section class="controller janela">
-             <form id="search-form">
-                <h2>Search</h2>
-                <div><label for="state">By State:</label><input type="text" id="stateinput" name="state"></div>
-                <div><label for="county">By County:</label><input type="text" id="countyinput" name="county"></div>
-                <div><label>Page:</label><input value="1" type="number" id="page" name=""></div>
-                <button class="search-button">SEARCH</button>
+    <section class="janela">
+        <div id="program-container">
+            <div id="search-container">
+                <form id="search-form">
+                    <div><h2>Search By County:</h2></div>
+                    <div>
+                        <label for="">State:</label>
+                        <select name="" id="select-state">
 
-                <h2>Generate Letters For All Parcels</h2>
-                <div>
-                    <label for="">Template:</label>
-                    <select name="" id="templateforall" onfocus="loadTemplates(this)">
-                        <option value="">--</option>
-                    </select>
-                </div>
-                <button class="generate-letter">GENERATE FOR ALL</button>
-            </form>
-    </section>
-    <section class="program janela">
-        <div class="itens-container">
+                        </select>
+                    </div>
+                    
+                    <div>
+                        <label for="">County:</label>
+                        <select name="" id="select-county">
+                            
+                        </select>
+                    </div>
+
+                    <div><button id="search-button">SEARCH</button></div>
+                    <div id="search-info" style="display: none;">
+                        <h2>Info:</h2>
+                        <h3></h3>
+                        <h3></h3>
+                        <h3></h3>
+
+                    </div>
+                </form>
+            </div>
+
+            <div id="parcels-container" style="display: none;">
+            </div>
+
+            <div id="result-container">
+            </div>
         </div>
+    </section>
 
-    <script src="/js/manager-programs/manager.js" async></script>
-    <script src="/js/manager-controllers/searchbycounty.js" async></script>
-    <script src="js/manager-programs/docx.js" async></script>
+    
+    <script src="js/manager-controllers/searchbycounty.js" async type="module"></script>
+    <script src="js/manager-programs/onclickevents.js"></script>
 </body>
 </html>
