--- a/server/views/searchbyrankandcounty.ejs
+++ b/server/views/searchbyrankandcounty.ejs
@@ -12,6 +12,8 @@
     <script src="https://kit.fontawesome.com/30836ed2bd.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/docx@7.1.0/build/index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.js"></script>
+    
+
     <title>HUNTERFY MANAGER</title>
 </head>
 <body>
@@ -24,39 +26,67 @@
             </div>
         </div>
     </header>
-    <section class="controller janela">
-             <form id="search-form">
-                <h2>Search</h2>
-                <div><label for="state">By State:</label><input type="text" id="stateinput" name="state"></div>
-                <div><label for="county">And By County:</label><input type="text" id="countyinput" name="county"></div>
-                <div>
-                    <label for="ranksel">And By Rank:</label>
-                    <select name="ranksel" id="rank">
-                        <option value="A">A</option>
-                        <option value="B">B</option>
-                        <option value="C">C</option>
-                        <option value="House">House</option>
-                    </select>
+    <section class="janela">
+        <div id="program-container">
+            <div id="search-container">
+                <form id="search-form">
+                    <div><h2>Search By County:</h2></div>
+                    <div>
+                        <label for="">State:</label>
+                        <select name="" id="select-state">
 
-                </div>
+                        </select>
+                    </div>
+                    
+                    <div>
+                        <label for="">County:</label>
+                        <select name="" id="select-county">
+                            
+                        </select>
+                    </div>
 
-                <div class="rankinput"><h3>Rank type:</h3>
-                    <div><input type="radio" name="ranktype" value="rank1"><label for="">Rank 1</label></div>
-                    <div><input type="radio" name="ranktype" value="rank2"><label for="">Rank 2</label></div>
-                    <div><input type="radio" name="ranktype" value="rank3"><label for="">Rank 3</label></div>
-                </div>
-                <div><label>Page:</label><input value="1" type="number" id="page" name=""></div>
-                <button class="search-button">SEARCH</button>
+                    <div>
+                        <label for="">Rank:</label>
+                        <select name="" id="select-rank">
+                            <option value="A">A</option>
+                            <option value="B">B</option>
+                            <option value="C">C</option>
+                            <option value="HOUSE">HOUSE</option>
 
-            </form>
-    </section>
-    <section class="program janela">
-        <h2 class="username"></h2>
-        <div class="itens-container">
+                        </select>
+                    </div>
+                    
+                    <div>
+                        <label for="">On Which Rank:</label>
+                        <select name="" id="ranktype-select">
+                            <option value="rank1">Rank 1</option>
+                            <option value="rank2">Rank 2</option>
+                            <option value="rank3">Rank 3</option>
+                        </select>
+                    </div>
+
+                    <div><button id="search-button">SEARCH</button></div>
+                    <div id="search-info" style="display: none;">
+                        <h2>Info:</h2>
+                        <h3></h3>
+                        <h3></h3>
+                        <h3></h3>
+                        <h3></h3>
+
+                    </div>
+                </form>
+            </div>
+
+            <div id="parcels-container" style="display: none;">
+            </div>
+
+            <div id="result-container">
+            </div>
         </div>
     </section>
-    <script src="js/manager-programs/manager.js" async></script>
-    <script src="js/manager-controllers/searchbyrankandcounty.js" async></script>
-    <script src="js/manager-programs/docx.js" async></script>
+
+    
+    <script src="js/manager-controllers/searchbyrankandcounty.js" async type="module"></script>
+    <script src="js/manager-programs/onclickevents.js"></script>
 </body>
 </html>
