--- a/server/views/searchbyuser.ejs
+++ b/server/views/searchbyuser.ejs
@@ -12,6 +12,8 @@
     <script src="https://kit.fontawesome.com/30836ed2bd.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/docx@7.1.0/build/index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.js"></script>
+    
+
     <title>HUNTERFY MANAGER</title>
 </head>
 <body>
@@ -24,22 +26,34 @@
             </div>
         </div>
     </header>
-    <section class="controller janela">
-             <form id="search-form">
-                <h2>Search</h2>
-                <div><label for="user">By User:</label><select name="" id="selectuser-parcellist"></select></div>
-                <div><label>And By Date:</label><input type="date" id="date" name=""></div>
-                <div><label>Page:</label><input value="1" type="number" id="page" name=""></div>
-                <button class="search-button">SEARCH</button>
-            </form>
-    </section>
-    <section class="program janela">
-        <h2 class="username"></h2>
-        <div class="itens-container">
+    <section class="janela">
+        <div id="program-container">
+            <div id="search-container">
+                <form id="search-form">
+                    <div><h2>Search By User</h2></div>
+                    <div><label for="">User:</label><select name="" id="select-user"></select></div>
+                    <div><label for="">Date:</label><input type="date" id="date-input"></div>
+                    <div><button id="search-button">SEARCH</button></div>
+                    <div id="search-info" style="display: none;">
+                        <h2>Info:</h2>
+                        <h3></h3>
+                        <h3></h3>
+                        <h3></h3>
+
+                    </div>
+                </form>
+            </div>
+
+            <div id="parcels-container" style="display: none;">
+            </div>
+
+            <div id="result-container">
+            </div>
         </div>
+    </section>
+
+    <script src="js/manager-programs/onclickevents.js"></script>
+    <script src="js/manager-controllers/searchbyuser.js" async type="module"></script>
     
-    <script src="js/manager-programs/manager.js"></script>
-    <script src="js/manager-controllers/searchbyuser.js" async></script>
-    <script src="js/manager-programs/docx.js" async></script>
 </body>
 </html>
